--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Green</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h1>Hello world, My name Ivan Green</h1>
     <h2>Hi men</h2>
 </body>
 </html>
